add_library(ast
        AbstractSyntaxTree.cpp
        AbstractSyntaxTreeBuilder.cpp
        AbstractSyntaxTreeBuilderContext.cpp
        ArithmeticExpression.cpp
        ArrayAccess.cpp
        ArrayDeclarator.cpp
        AssignmentExpression.cpp
        BitwiseExpression.cpp
        Block.cpp
        ComparisonExpression.cpp
        Constant.cpp
        ConstantExpression.cpp
        ContextualSyntaxNodeBuilder.cpp
        Declaration.cpp
        DeclarationSpecifiers.cpp
        Declarator.cpp
        DirectDeclarator.cpp
        DoubleOperandExpression.cpp
        Expression.cpp
        ExpressionList.cpp
        ForLoopHeader.cpp
        FormalArgument.cpp
        FunctionCall.cpp
        FunctionDeclarator.cpp
        FunctionDefinition.cpp
        Identifier.cpp
        IdentifierExpression.cpp
        IfElseStatement.cpp
        IfStatement.cpp
        InitializedDeclarator.cpp
        IOStatement.cpp
        JumpStatement.cpp
        LogicalAndExpression.cpp
        LogicalExpression.cpp
        LogicalOrExpression.cpp
        LoopHeader.cpp
        LoopStatement.cpp
        Operator.cpp
        Pointer.cpp
        PostfixExpression.cpp
        PrefixExpression.cpp
        ReturnStatement.cpp
        VoidReturnStatement.cpp
        ShiftExpression.cpp
        SingleOperandExpression.cpp
        StorageSpecifier.cpp
        StringLiteral.cpp
        TerminalSymbol.cpp
        TranslationUnitContextAware.cpp
        TypeCast.cpp
        TypeSpecifier.cpp
        UnaryExpression.cpp
        VerboseSyntaxTreeBuilder.cpp
        WhileLoopHeader.cpp
        AbstractSyntaxTree.h
        AbstractSyntaxTreeBuilder.h
        AbstractSyntaxTreeBuilderContext.h
        AbstractSyntaxTreeNode.h
        AbstractSyntaxTreeVisitor.h
        ArithmeticExpression.h
        ArrayAccess.h
        ArrayDeclarator.h
        AssignmentExpression.h
        BitwiseExpression.h
        Block.h
        ComparisonExpression.h
        Constant.h
        ConstantExpression.h
        ContextualSyntaxNodeBuilder.h
        Declaration.h
        DeclarationSpecifiers.h
        Declarator.h
        DirectDeclarator.h
        DoubleOperandExpression.h
        Expression.h
        ExpressionList.h
        ForLoopHeader.h
        FormalArgument.h
        FunctionCall.h
        FunctionDeclarator.h
        FunctionDefinition.h
        Identifier.h
        IdentifierExpression.h
        IfElseStatement.h
        IfStatement.h
        InitializedDeclarator.h
        IOStatement.h
        JumpStatement.h
        LogicalAndExpression.h
        LogicalExpression.h
        LogicalOrExpression.h
        LoopHeader.h
        LoopStatement.h
        Operator.h
        Pointer.h
        PostfixExpression.h
        PrefixExpression.h
        ReturnStatement.h
        VoidReturnStatement.h
        ShiftExpression.h
        SingleOperandExpression.h
        StorageSpecifier.h
        StringLiteral.h
        TerminalSymbol.h
        TranslationUnitContextAware.h
        TypeCast.h
        TypeSpecifier.h
        UnaryExpression.h
        VerboseSyntaxTreeBuilder.h
        WhileLoopHeader.h
        LoggingSyntaxTreeVisitor.h
        LoggingSyntaxTreeVisitor.cpp
    )

target_link_libraries(ast parser types semantic_analyzer)
