add_library(ast
        AbstractSyntaxTree.cpp
        AbstractSyntaxTreeBuilder.cpp
        AbstractSyntaxTreeBuilderContext.cpp
        ArithmeticExpression.cpp
        ArrayAccess.cpp
        ArrayDeclarator.cpp
        AssignmentExpression.cpp
        BitwiseExpression.cpp
        Block.cpp
        BuiltinRegistry.cpp
        CaseLabel.cpp
        ComparisonExpression.cpp
        CompoundLiteralExpression.cpp
        ConditionalExpression.cpp
        Constant.cpp
        ConstantExpression.cpp
        ContextualSyntaxNodeBuilder.cpp
        CSNB_Types.cpp
        CSNB_Declarators.cpp
        CSNB_Expressions.cpp
        CSNB_Initializers.cpp
        CSNB_Statements.cpp
        CSNB_Builtins.cpp
        CSNB_Internal.h
        Declaration.cpp
        DeclarationSpecifiers.cpp
        Declarator.cpp
        DefaultLabel.cpp
        DirectDeclarator.cpp
        DoWhileLoopHeader.cpp
        DoubleOperandExpression.cpp
        Expression.cpp
        ExpressionList.cpp
        ForLoopHeader.cpp
        FormalArgument.cpp
        FunctionCall.cpp
        FunctionDeclarator.cpp
        FunctionDefinition.cpp
        GotoStatement.cpp
        Identifier.cpp
        IdentifierExpression.cpp
        IfElseStatement.cpp
        IfStatement.cpp
        InitializedDeclarator.cpp
        InitializerListExpression.cpp
        JumpStatement.cpp
        LabeledStatement.cpp
        LogicalAndExpression.cpp
        LogicalExpression.cpp
        LogicalOrExpression.cpp
        MemberAccess.cpp
        MemberAccess.h
        LoopHeader.cpp
        LoopStatement.cpp
        NestedDeclarator.cpp
        Operator.cpp
        PendingArrayMemberStore.cpp
        ParseEnvironment.cpp
        Pointer.cpp
        PostfixExpression.cpp
        PrefixExpression.cpp
        ReturnStatement.cpp
        VoidReturnStatement.cpp
        ShiftExpression.cpp
        SingleOperandExpression.cpp
        StorageSpecifier.cpp
        StringLiteralExpression.cpp

        SwitchStatement.cpp
        TerminalSymbol.cpp
        TranslationUnitContextAware.cpp
        TypeCast.cpp
        TypeSpecifier.cpp
        UnaryExpression.cpp
        WhileLoopHeader.cpp
        AbstractSyntaxTree.h
        AbstractSyntaxTreeBuilder.h
        AbstractSyntaxTreeBuilderContext.h
        AbstractSyntaxTreeNode.h
        AbstractSyntaxTreeVisitor.h
        ArithmeticExpression.h
        ArrayAccess.h
        ArrayDeclarator.h
        AssignmentExpression.h
        BitwiseExpression.h
        Block.h
        BuiltinRegistry.h
        CaseLabel.h
        ComparisonExpression.h
        CompoundLiteralExpression.h
        ConditionalExpression.h
        Constant.h
        ConstantExpression.h
        ContextualSyntaxNodeBuilder.h
        Declaration.h
        DeclarationSpecifiers.h
        Declarator.h
        DefaultLabel.h
        DirectDeclarator.h
        DoWhileLoopHeader.h
        DoubleOperandExpression.h
        Expression.h
        ExpressionList.h
        ForLoopHeader.h
        FormalArgument.h
        FunctionCall.h
        FunctionDeclarator.h
        FunctionDefinition.h
        GotoStatement.h
        Identifier.h
        IdentifierExpression.h
        IfElseStatement.h
        IfStatement.h
        InitializedDeclarator.h
        InitializerListExpression.h
        JumpStatement.h
        LabeledStatement.h
        LogicalAndExpression.h
        LogicalExpression.h
        LogicalOrExpression.h
        LoopHeader.h
        LoopStatement.h
        NestedDeclarator.h
        Operator.h
        ParseEnvironment.h
        PendingArrayMemberStore.h
        Pointer.h
        PostfixExpression.h
        PrefixExpression.h
        ReturnStatement.h
        VoidReturnStatement.h
        ShiftExpression.h
        SingleOperandExpression.h
        StorageSpecifier.h
        StringLiteralExpression.h

        SwitchStatement.h
        TerminalSymbol.h
        TranslationUnitContextAware.h
        TypeCast.h
        TypeSpecifier.h
        UnaryExpression.h
        WhileLoopHeader.h
    )

trans_target_defaults(ast)
target_link_libraries(ast PUBLIC parser types symbols)
