add_library(codegen
        quadruples/Add.cpp
        quadruples/AddressOf.cpp
        quadruples/And.cpp
        quadruples/Argument.cpp
        quadruples/Assign.cpp
        quadruples/AssignConstant.cpp
        quadruples/Call.cpp
        quadruples/Dec.cpp
        quadruples/Dereference.cpp
        quadruples/Div.cpp
        quadruples/DoubleOperandQuadruple.cpp
        quadruples/EndProcedure.cpp
        quadruples/Inc.cpp
        quadruples/Input.cpp
        quadruples/Jump.cpp
        quadruples/Label.cpp
        quadruples/LvalueAssign.cpp
        quadruples/Mod.cpp
        quadruples/Mul.cpp
        quadruples/Or.cpp
        quadruples/Output.cpp
        quadruples/Retrieve.cpp
        quadruples/Return.cpp
        quadruples/SingleOperandQuadruple.cpp
        quadruples/StartProcedure.cpp
        quadruples/Sub.cpp
        quadruples/UnaryMinus.cpp
        quadruples/ValueCompare.cpp
        quadruples/Xor.cpp
        quadruples/ZeroCompare.cpp
        Amd64Registers.cpp
        AssemblyGenerator.cpp
        ATandTInstructionSet.cpp
        CodeGeneratingVisitor.cpp
        IntelInstructionSet.cpp
        QuadrupleGenerator.cpp
        Register.cpp
        StackMachine.cpp
        Value.cpp
        quadruples/Add.h
        quadruples/AddressOf.h
        quadruples/And.h
        quadruples/Argument.h
        quadruples/Assign.h
        quadruples/AssignConstant.h
        quadruples/Call.h
        quadruples/Dec.h
        quadruples/Dereference.h
        quadruples/Div.h
        quadruples/DoubleOperandQuadruple.h
        quadruples/EndProcedure.h
        quadruples/Inc.h
        quadruples/Input.h
        quadruples/Jump.h
        quadruples/Label.h
        quadruples/LvalueAssign.h
        quadruples/Mod.h
        quadruples/Mul.h
        quadruples/Or.h
        quadruples/Output.h
        quadruples/Quadruple.h
        quadruples/Retrieve.h
        quadruples/Return.h
        quadruples/SingleOperandQuadruple.h
        quadruples/StartProcedure.h
        quadruples/Sub.h
        quadruples/UnaryMinus.h
        quadruples/ValueCompare.h
        quadruples/Xor.h
        quadruples/ZeroCompare.h
        Amd64Registers.h
        AssemblyGenerator.h
        ATandTInstructionSet.h
        CodeGeneratingVisitor.h
        InstructionSet.h
        IntelInstructionSet.h
        QuadrupleGenerator.h
        Register.h
        StackMachine.h
        Value.h)

target_include_directories(codegen PUBLIC "${CMAKE_SOURCE_DIR}/src")
target_link_libraries(codegen ast)
