add_library(codegen
        quadruples/Add.cpp
        quadruples/AddressOf.cpp
        quadruples/And.cpp
        quadruples/Argument.cpp
        quadruples/Assign.cpp
        quadruples/AssignConstant.cpp
        quadruples/BasicBlock.cpp
        quadruples/Call.cpp
        quadruples/Dec.cpp
        quadruples/Dereference.cpp
        quadruples/Div.cpp
        quadruples/DoubleOperandQuadruple.cpp
        quadruples/EndProcedure.cpp
        quadruples/FieldAccess.cpp
        quadruples/FunctionAddress.cpp
        quadruples/IndexAddress.cpp
        quadruples/Inc.cpp
        quadruples/Jump.cpp
        quadruples/Label.cpp
        quadruples/LvalueAssign.cpp
        quadruples/Mod.cpp
        quadruples/Mul.cpp
        quadruples/Or.cpp
        quadruples/Retrieve.cpp
        quadruples/Return.cpp
        quadruples/VoidReturn.cpp
        quadruples/SingleOperandQuadruple.cpp
        quadruples/StartProcedure.cpp
        quadruples/Sub.cpp
        quadruples/Shl.cpp
        quadruples/Shr.cpp
        quadruples/Truncate.cpp
        quadruples/UnaryMinus.cpp
        quadruples/BitwiseNot.cpp
        quadruples/BuiltinOp.cpp
        quadruples/VaOp.cpp
        quadruples/ValueCompare.cpp
        quadruples/Xor.cpp
        quadruples/ZeroCompare.cpp
        Amd64Registers.cpp
        AssemblyGenerator.cpp
        ATandTInstructionSet.cpp
        CodeGeneratingVisitor.cpp
        CodeGeneratingVisitor_Expressions.cpp
        CodeGeneratingVisitor_Statements.cpp
        FrameLayout.cpp
        IntelInstructionSet.cpp
        QuadrupleGenerator.cpp
        Register.cpp
        StackMachine.cpp
        StackMachineFrame.cpp
        StackMachineCall.cpp
        StackMachineMemory.cpp
        StackMachineVa.cpp
        StackMachineArith.cpp
        Value.cpp
        Assembly.cpp
        quadruples/Add.h
        quadruples/AddressOf.h
        quadruples/And.h
        quadruples/Argument.h
        quadruples/Assign.h
        quadruples/AssignConstant.h
        quadruples/BasicBlock.h
        quadruples/Call.h
        quadruples/Dec.h
        quadruples/Dereference.h
        quadruples/Div.h
        quadruples/DoubleOperandQuadruple.h
        quadruples/EndProcedure.h
        quadruples/FieldAccess.h
        quadruples/FunctionAddress.h
        quadruples/IndexAddress.h
        quadruples/Inc.h
        quadruples/Jump.h
        quadruples/Label.h
        quadruples/LvalueAssign.h
        quadruples/Mod.h
        quadruples/Mul.h
        quadruples/Or.h
        quadruples/Quadruple.h
        quadruples/Retrieve.h
        quadruples/Return.h
        quadruples/VoidReturn.h
        quadruples/SingleOperandQuadruple.h
        quadruples/StartProcedure.h
        quadruples/Sub.h
        quadruples/Shl.h
        quadruples/Shr.h
        quadruples/Truncate.h
        quadruples/UnaryMinus.h
        quadruples/BitwiseNot.h
        quadruples/BuiltinOp.h
        quadruples/VaOp.h
        quadruples/ValueCompare.h
        quadruples/Xor.h
        quadruples/ZeroCompare.h
        Address.h
        Amd64Registers.h
        AssemblyGenerator.h
        ATandTInstructionSet.h
        CodeGeneratingVisitor.h
        CodeGeneratingVisitorInternal.h
        FrameLayout.h
        InstructionSet.h
        GlobalVariable.h
        IntelInstructionSet.h
        MemoryOperand.h
        ObjectAbi.h
        QuadrupleGenerator.h
        Register.h
        StackMachine.h
        StackMachineInternal.h
        Value.h
        Assembly.h)

target_include_directories(codegen PUBLIC "${CMAKE_SOURCE_DIR}/src")
target_link_libraries(codegen PUBLIC ast util)
