add_library(parser
        Action.cpp
        BNFFileReader.cpp
        CanonicalCollection.cpp
        FilePersistedParsingTable.cpp
        FirstTable.cpp
        GeneratedParsingTable.cpp
        Grammar.cpp
        GrammarBuilder.cpp
        LookaheadActionTable.cpp
        LR1Item.cpp
        LR1Parser.cpp
        ParseTree.cpp
        ParseTreeBuilder.cpp
        ParseTreeNode.cpp
        ParseTreeToSourceConverter.cpp
        ParsingTable.cpp
        ParsingTableReader.cpp
        Production.cpp
        TerminalNode.cpp
        TokenStream.cpp
        XmlOutputVisitor.cpp
        Action.h
        BNFFileReader.h
        CanonicalCollection.h
        FilePersistedParsingTable.h
        FirstTable.h
        GenerationBuffers.h
        GeneratedParsingTable.h
        HashCombine.h
        Grammar.h
        GrammarBuilder.h
        LookaheadActionTable.h
        LR1Item.h
        LR1Parser.h
        Parser.h
        ParseTree.h
        ParseTreeBuilder.h
        ParseTreeNode.h
        ParseTreeNodeVisitor.h
        ParseTreeToSourceConverter.h
        ParsingTable.h
        ParsingTableReader.h
        Production.h
        SyntaxTree.h
        SyntaxTreeBuilder.h
        SyntaxTreeBuilder.cpp
        SyntaxTreeVisitor.h
        TerminalNode.h
        TokenStream.h
        XmlOutputVisitor.h)

target_include_directories(parser PUBLIC "${CMAKE_SOURCE_DIR}/src")
target_link_libraries(parser PUBLIC scanner util)
